--- a/scanner.html
+++ b/scanner.html
@@ -88,7 +88,7 @@
 
     <div class="container">
         <h2>Vérification d'une Machine</h2>
-        <p>Entrez le numéro de machine pour vérifier l'inspection :</p>
+        <p>Entrez le numéro de machine pour vérifier si une inspection est nécessaire :</p>
         
         <input type="text" id="machineNumber" placeholder="Numéro de machine">
         <button onclick="verifierMachine()">Vérifier</button>
