--- a/scanner.html
+++ b/scanner.html
@@ -148,7 +148,7 @@
 
                 let resultText = `Inspection pour la machine ${machineNumber}:\n`;
                 if (inspections.periodique || inspections.annuelle) {
-                    resultText += `Type d'inspection :\n`;
+                    resultText += `Type d'inspection à faire:\n`;
                     if (inspections.periodique) {
                         resultText += `- Inspection sécurité périodique\n`;
                     }
