--- a/inventaire.html
+++ b/inventaire.html
@@ -153,7 +153,7 @@
   </div>
 
   <script>
-    const EXCEL_URL = "https://raw.githubusercontent.com/azizgouia123/ispect/main/N.csv.xlsm";
+    const EXCEL_URL = "https://raw.githubusercontent.com/azizgouia123/ispect/main/N.xlsx";
     const COLOR_COLUMN = 7; // Colonne H (0-based index)
     const LAST_COLUMN = 5; // Colonne F (0-based index)
     let workbook;
