--- a/requisition.html
+++ b/requisition.html
@@ -339,7 +339,25 @@
         Signature du technicien
         <select class="technician-signature" required>
           <option value="" disabled selected>Sélectionner</option>
-          <!-- … autres options … -->
+         
+                    <option value="Dominic Vallée">Dominic Vallée</option>
+                    <option value="Raphael Bouchard">Raphael Bouchard</option>
+                    <option value="Christopher's Rivas">Christopher's Rivas</option>
+                    <option value="Benoit Corneau">Benoit Corneau</option>
+                    <option value="Marc-André Moreau">Marc-André Moreau</option>
+                    <option value="Roger Leclair">Roger Leclair</option>
+                    <option value="Pierre-Luc Carmel">Pierre-Luc Carmel</option>
+                    <option value="Robert Langlois">Robert Langlois</option>
+                    <option value="Benjamin Couture">Benjamin Couture</option>
+                    <option value="Éric Rabouin">Éric Rabouin</option>
+                    <option value="Guillaume Marcoux">Guillaume Marcoux</option>
+                    <option value="Karim Mammouche">Karim Mammouche</option>
+                    <option value="Sébastien Cloutier">Sébastien Cloutier</option>
+                    <option value="Yassine Sakhraji">Yassine Sakhraji</option>
+                    <option value="Soufiane Hamil">Soufiane Hamil</option>
+                    <option value="Sérigne Mansour Diagne">Énergie - Sérigne Mansour Diagne</option>
+                
+
         </select>
         <div class="error-message">Ce champ est obligatoire</div>
       </div>
