--- a/requisition.html
+++ b/requisition.html
@@ -29,14 +29,6 @@
       flex-wrap: wrap;
       margin-bottom: 1rem;
     }
-    .header-left,
-    .header-right {
-      display: flex;
-      align-items: center;
-    }
-    .header-right {
-      text-align: right;
-    }
     .logo {
       height: 70px;
       width: auto;
@@ -62,14 +54,8 @@
     .checkboxes label {
       white-space: nowrap;
     }
-    /* wrapper to allow horizontal scroll on mobile */
-    .table-wrapper {
-      overflow-x: auto;
-      -webkit-overflow-scrolling: touch;
-    }
     table {
       width: 100%;
-      min-width: 800px; /* ensure columns aren’t squashed */
       border-collapse: collapse;
       margin-top: 1rem;
       font-size: 0.85rem;
@@ -86,7 +72,6 @@
     input[type="text"],
     input[type="number"],
     input[type="date"],
-    textarea,
     select {
       border: 1px solid #a6c9ff;
       background-color: #e0f2ff;
@@ -96,51 +81,10 @@
       margin: 0;
       width: 100%;
     }
-    input[type="checkbox"],
-    input[type="radio"] {
-      width: auto;
-      vertical-align: middle;
-      border: 1px solid #ccc;
-      background-color: white;
-    }
-    .comments {
-      width: 100%;
-      height: 100px;
-      margin-top: 1rem;
-      background-color: #e0f2ff;
-      border: 1px solid #a6c9ff;
-      padding: 0.5rem;
-      box-sizing: border-box;
-    }
-    .signatures {
-      display: flex;
-      justify-content: space-between;
-      margin-top: 1.5rem;
-      gap: 1rem;
-      flex-wrap: wrap;
-      align-items: flex-end;
-    }
-    .signature-block {
-      flex: 1;
-      min-width: 200px;
-    }
-    .signature-block select {
-      margin-top: 5px;
-    }
-    .legend {
+    .error-message {
+      color: red;
       font-size: 0.8rem;
-      margin-top: 1rem;
-      padding: 10px;
-      background-color: #f0f0f0;
-      border: 1px solid #000;
-      border-radius: 5px;
-    }
-    .table-controls {
-      display: flex;
-      justify-content: flex-end;
-      gap: 10px;
-      margin-top: 10px;
-      flex-wrap: wrap;
+      display: none;
     }
     .btn {
       padding: 8px 15px;
@@ -159,50 +103,6 @@
       cursor: pointer;
       font-weight: bold;
       font-size: 1rem;
-    }
-    .error-message {
-      color: red;
-      font-size: 0.8rem;
-      margin-top: 5px;
-      display: none;
-    }
-
-    /* === Responsive pour écrans ≤ 768px === */
-    @media screen and (max-width: 768px) {
-      .container {
-        padding: 0.5rem;
-      }
-      .header {
-        flex-direction: column;
-        align-items: flex-start;
-      }
-      .header-right {
-        text-align: left;
-        margin-top: 0.5rem;
-      }
-      .checkboxes {
-        flex-direction: column;
-        gap: 4px;
-      }
-      .table-controls {
-        flex-direction: column;
-        align-items: stretch;
-      }
-      .table-controls .btn {
-        width: 100%;
-        margin-bottom: 0.5rem;
-      }
-      input[type="text"],
-      input[type="number"],
-      input[type="date"],
-      select,
-      .comments {
-        font-size: 1rem;
-        padding: 0.5rem;
-      }
-      .table-wrapper {
-        margin-top: 1rem;
-      }
     }
   </style>
 </head>
@@ -251,57 +151,15 @@
         </thead>
         <tbody>
           <tr>
-            <td>
-              <div class="item-number">
-                <input type="text" class="item-input" placeholder="N° Item" style="width: 80px;" required>
-                <div class="error-message">Ce champ est obligatoire</div>
-                <label><input type="checkbox" class="warranty-checkbox"> Garantie</label>
-              </div>
-            </td>
-            <td>
-              <div class="description-container">
-                <input type="text" class="description-input" placeholder="Description" required>
-                <div class="error-message">Ce champ est obligatoire</div>
-                <input type="text" class="description-input" placeholder="Fournisseur" required>
-                <div class="error-message">Ce champ est obligatoire</div>
-              </div>
-            </td>
-            <td>
-              <input type="number" class="quantity-input" required>
-              <div class="error-message">Ce champ est obligatoire</div>
-            </td>
-            <td>
-              <input type="text" class="unit-input" required>
-              <div class="error-message">Ce champ est obligatoire</div>
-            </td>
-            <td>
-              <input type="text" class="model-input" required>
-              <div class="error-message">Ce champ est obligatoire</div>
-            </td>
-            <td>
-              <input type="text" class="work-order-input" required>
-              <div class="error-message">Ce champ est obligatoire</div>
-            </td>
-            <td>
-              <div class="piece-options">
-                <label><input type="radio" name="piece0" required> C</label>
-                <label><input type="radio" name="piece0" required> T</label>
-                <div class="error-message">Veuillez sélectionner une option</div>
-              </div>
-            </td>
-            <td>
-              <select class="urgency-select" required>
-                <option value="" disabled selected>Sélectionner</option>
-                <option value="1">1 (1 jour)</option>
-                <option value="2">2 (3-5 jours)</option>
-                <option value="3">3 (5-10 jours)</option>
-              </select>
-              <div class="error-message">Ce champ est obligatoire</div>
-            </td>
-            <td>
-              <input type="date" class="order-date" required>
-              <div class="error-message">Ce champ est obligatoire</div>
-            </td>
+            <td><input type="text" class="item-input" placeholder="N° Item" style="width: 80px;" required></td>
+            <td><input type="text" class="description-input" placeholder="Description" required></td>
+            <td><input type="number" class="quantity-input" required></td>
+            <td><input type="text" class="unit-input" required></td>
+            <td><input type="text" class="model-input" required></td>
+            <td><input type="text" class="work-order-input" required></td>
+            <td><input type="radio" name="piece0" required> C <input type="radio" name="piece0" required> T</td>
+            <td><select class="urgency-select" required><option value="1">1 (1 jour)</option><option value="2">2 (3-5 jours)</option><option value="3">3 (5-10 jours)</option></select></td>
+            <td><input type="date" class="order-date" required></td>
             <td><span class="delete-row" onclick="removeRow(this)">×</span></td>
           </tr>
         </tbody>
@@ -319,47 +177,22 @@
       <textarea id="comments" class="comments"></textarea>
     </div>
 
-    <div class="legend">
-      <strong>LÉGENDE</strong><br>
-      Pièce : C = En commande | T = En tablette<br>
-      Urgence : 1 = 1 jour, 2 = 3 à 5 jours, 3 = 5 à 10 jours
-    </div>
-
     <div class="signatures">
       <div class="signature-block">
         Signature du superviseur
         <select class="supervisor-signature" required>
-          <option value="" disabled selected>Sélectionner</option>
+          <option value="">Sélectionner</option>
           <option>Abdelaziz Gouia</option>
           <option>Jean-Pierre Laperle</option>
         </select>
-        <div class="error-message">Ce champ est obligatoire</div>
       </div>
       <div class="signature-block">
         Signature du technicien
         <select class="technician-signature" required>
-          <option value="" disabled selected>Sélectionner</option>
-         
-                    <option value="Dominic Vallée">Dominic Vallée</option>
-                    <option value="Raphael Bouchard">Raphael Bouchard</option>
-                    <option value="Christopher's Rivas">Christopher's Rivas</option>
-                    <option value="Benoit Corneau">Benoit Corneau</option>
-                    <option value="Marc-André Moreau">Marc-André Moreau</option>
-                    <option value="Roger Leclair">Roger Leclair</option>
-                    <option value="Pierre-Luc Carmel">Pierre-Luc Carmel</option>
-                    <option value="Robert Langlois">Robert Langlois</option>
-                    <option value="Benjamin Couture">Benjamin Couture</option>
-                    <option value="Éric Rabouin">Éric Rabouin</option>
-                    <option value="Guillaume Marcoux">Guillaume Marcoux</option>
-                    <option value="Karim Mammouche">Karim Mammouche</option>
-                    <option value="Sébastien Cloutier">Sébastien Cloutier</option>
-                    <option value="Yassine Sakhraji">Yassine Sakhraji</option>
-                    <option value="Soufiane Hamil">Soufiane Hamil</option>
-                    <option value="Sérigne Mansour Diagne">Énergie - Sérigne Mansour Diagne</option>
-                
-
+          <option value="">Sélectionner</option>
+          <option>Technicien A</option>
+          <option>Technicien B</option>
         </select>
-        <div class="error-message">Ce champ est obligatoire</div>
       </div>
       <div class="signature-block">
         Date <input type="date" id="document-date">
@@ -377,118 +210,51 @@
     ];
 
     document.addEventListener('DOMContentLoaded', () => {
-      // remplit les ateliers
       const c = document.getElementById('workshop-checkboxes');
-      workshops.forEach((w,i) => {
+      workshops.forEach((w, i) => {
         const lbl = document.createElement('label');
-        lbl.innerHTML = `<input type="radio" name="workshop" value="${w}" ${i===0?'required':''}> ${w}`;
+        lbl.innerHTML = `<input type="radio" name="workshop" value="${w}"> ${w}`;
         c.appendChild(lbl);
-      });
-
-      // date du jour
-      const today = new Date().toISOString().split('T')[0];
-      document.getElementById('document-date').value = today;
-      document.querySelectorAll('.order-date').forEach(i => i.value = today);
-
-      // sync doc number → work-order inputs
-      const docNum = document.getElementById('doc-number');
-      docNum.addEventListener('input', ()=> {
-        document.querySelectorAll('.work-order-input').forEach(i => i.value = docNum.value);
       });
     });
 
     function addRow() {
-      const t = document.querySelector('#partsTable tbody');
-      const id = Date.now();
-      const today = new Date().toISOString().split('T')[0];
-      const num = document.getElementById('doc-number').value;
-      const r = document.createElement('tr');
-      r.innerHTML = `
-        <td><div class="item-number"><input type="text" class="item-input" style="width:80px" required><div class="error-message">Ce champ est obligatoire</div><label><input type="checkbox" class="warranty-checkbox"> Garantie</label></div></td>
-        <td><div class="description-container"><input type="text" class="description-input" placeholder="Description" required><div class="error-message">Ce champ est obligatoire</div><input type="text" class="description-input" placeholder="Fournisseur" required><div class="error-message">Ce champ est obligatoire</div></div></td>
-        <td><input type="number" class="quantity-input" required><div class="error-message">Ce champ est obligatoire</div></td>
-        <td><input type="text" class="unit-input" required><div class="error-message">Ce champ est obligatoire</div></td>
-        <td><input type="text" class="model-input" required><div class="error-message">Ce champ est obligatoire</div></td>
-        <td><input type="text" class="work-order-input" value="${num}" required><div class="error-message">Ce champ est obligatoire</div></td>
-        <td><div class="piece-options"><label><input type="radio" name="piece${id}" required> C</label><label><input type="radio" name="piece${id}" required> T</label><div class="error-message">Veuillez sélectionner une option</div></div></td>
-        <td><select class="urgency-select" required><option value="" disabled selected>Sélectionner</option><option value="1">1 (1 jour)</option><option value="2">2 (3-5 jours)</option><option value="3">3 (5-10 jours)</option></select><div class="error-message">Ce champ est obligatoire</div></td>
-        <td><input type="date" class="order-date" value="${today}" required><div class="error-message">Ce champ est obligatoire</div></td>
-        <td><span class="delete-row" onclick="removeRow(this)">×</span></td>`;
-      t.appendChild(r);
+      const table = document.getElementById('partsTable').getElementsByTagName('tbody')[0];
+      const row = table.insertRow(table.rows.length);
+      row.innerHTML = `<td><input type="text" class="item-input" placeholder="N° Item" style="width: 80px;" required></td>
+                      <td><input type="text" class="description-input" placeholder="Description" required></td>
+                      <td><input type="number" class="quantity-input" required></td>
+                      <td><input type="text" class="unit-input" required></td>
+                      <td><input type="text" class="model-input" required></td>
+                      <td><input type="text" class="work-order-input" required></td>
+                      <td><input type="radio" name="piece" required> C <input type="radio" name="piece" required> T</td>
+                      <td><select class="urgency-select" required><option value="1">1 (1 jour)</option><option value="2">2 (3-5 jours)</option><option value="3">3 (5-10 jours)</option></select></td>
+                      <td><input type="date" class="order-date" required></td>
+                      <td><span class="delete-row" onclick="removeRow(this)">×</span></td>`;
+    }
+
+    function removeRow(btn) {
+      btn.closest('tr').remove();
     }
 
     function removeLastRow() {
-      const rows = document.querySelectorAll('#partsTable tbody tr');
-      if (rows.length > 1) rows[rows.length - 1].remove();
-      else alert("Vous ne pouvez pas supprimer la dernière ligne !");
-    }
-
-    function removeRow(b) {
-      const rows = document.querySelectorAll('#partsTable tbody tr');
-      if (rows.length > 1) b.closest('tr').remove();
-      else alert("Vous ne pouvez pas supprimer la dernière ligne !");
-    }
-
-    function validateForm() {
-      let ok = true;
-      document.querySelectorAll('.error-message').forEach(e => e.style.display = 'none');
-
-      const num = document.getElementById('doc-number').value.trim();
-      if (!num) { document.getElementById('doc-number-error').style.display = 'block'; ok = false; }
-      if (!document.querySelector('input[name="workshop"]:checked')) { document.getElementById('workshop-error').style.display = 'block'; ok = false; }
-      if (!document.getElementById('truck-number').value.trim()) { document.getElementById('truck-number-error').style.display = 'block'; ok = false; }
-
-      document.querySelectorAll('#partsTable tbody tr').forEach((tr,i) => {
-        tr.querySelectorAll('[required]').forEach(inp => {
-          if ((inp.type==='radio'||inp.type==='checkbox') && !tr.querySelector(`[name="${inp.name}"]:checked`)) {
-            tr.querySelector('.piece-options .error-message').style.display = 'block'; ok = false;
-          } else if (!inp.value && inp.type!=='checkbox') {
-            inp.nextElementSibling?.classList.contains('error-message') && (inp.nextElementSibling.style.display = 'block');
-            ok = false;
-          }
-        });
-        if (tr.querySelector('.work-order-input').value !== num) {
-          alert(`Ligne ${i+1}: le N° de bon doit être identique au N° de réquisition`);
-          ok = false;
-        }
-      });
-
-      ['.supervisor-signature','.technician-signature'].forEach(sel => {
-        const e = document.querySelector(sel);
-        if (!e.value) { e.nextElementSibling.style.display = 'block'; ok = false; }
-      });
-
-      return ok;
-    }
-
-    async function generatePDF() {
-      if (!validateForm()) return;
-      const controls = document.querySelector('.table-controls');
-      controls.style.display = 'none';
-      try {
-        const canvas = await html2canvas(document.getElementById('pdf-content'), {
-          scale: 2,
-          useCORS: true,
-          logging: true,
-          scrollX: 0,
-          scrollY: 0,
-          windowWidth: document.getElementById('pdf-content').scrollWidth,
-          windowHeight: document.getElementById('pdf-content').scrollHeight
-        });
-        controls.style.display = 'flex';
-        const { jsPDF } = window.jspdf;
-        const pdf = new jsPDF('p','mm','a4');
-        const img = canvas.toDataURL('image/jpeg', 0.8);
-        const w = pdf.internal.pageSize.getWidth();
-        const h = (canvas.height * w) / canvas.width;
-        pdf.addImage(img, 'JPEG', 0, 0, w, h);
-        const fname = document.getElementById('doc-number').value.trim() || 'Requisition';
-        pdf.save(`${fname}.pdf`);
-      } catch (e) {
-        console.error(e);
-        controls.style.display = 'flex';
-        alert("Une erreur est survenue lors de la génération du PDF. Veuillez réessayer.");
+      const table = document.getElementById('partsTable').getElementsByTagName('tbody')[0];
+      if (table.rows.length > 1) {
+        table.deleteRow(table.rows.length - 1);
       }
+    }
+
+    function generatePDF() {
+      const { jsPDF } = window.jspdf;
+      const doc = new jsPDF();
+      doc.html(document.getElementById("pdf-content"), {
+        callback: function (doc) {
+          doc.save("requisition-pieces.pdf");
+        },
+        margin: [10, 10],
+        x: 10,
+        y: 10
+      });
     }
   </script>
 </body>
